fixed the issue that was causing mobile dropdown border bottom to cause overflow

--- a/src/assets/dropdowns.css
+++ b/src/assets/dropdowns.css
@@ -29,7 +29,6 @@
     list-style: none;
     border-bottom: 1px solid #9a8888;
     display: block;
-    width: 100%;
 }
 
 .dropdown-content li:last-child {
@@ -84,7 +83,7 @@ details[open] > .dropdown-subcontent {
     display: block;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1024px) {
     .navigation-header-mobile .dropdown-content {
         left: 0;
     }
@@ -92,3 +91,4 @@ details[open] > .dropdown-subcontent {
         display: none;
     }
 }
+
